--- a/task_management_system/package.json
+++ b/task_management_system/package.json
@@ -10,6 +10,7 @@
     "eslint-config-react-app": "^7.0.1",
     "firebase": "^10.12.4",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.25.0",
